@@ -1,3 +1,4 @@
+* Support import of timedelta data
 * Add symbol widget
 * Add sql_pairing tool
 * Add format_datetime to Report
